db-deploy-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: django-ns
  labels:
    app: db
  name: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: mysql
        name: db
        ports:
          - containerPort: 3306
        args: ['--default-authentication-plugin=mysql_native_password', '--init-file=/data/file.sql']
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: data-fs
          - mountPath: /data
            name: sql-file
      volumes:
        - name: data-fs
          persistentVolumeClaim:
            claimName: data-pvc
        - name: sql-file
          configMap:
            name: cm-db
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: django-ns
spec:
  selector:
    app: db
  ports:
   - port: 3306
     targetPort: 3306
     protocol: TCP
