django-deploy-dev.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: django-ns
  labels:
    app: myapp
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: myapp
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - image: iafak/django-app:v1
        name: myapp
        ports:
          - containerPort: 8000
        volumeMounts:
          - mountPath: /vol/web
            name: media-fs
      volumes:
        - name: media-fs
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: django-ns
spec:
  selector:
    app: myapp
  ports:
   - port: 8000
     targetPort: 8000
     protocol: TCP
