front-deploy-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: django-ns
  labels:
    app: front
  name: front
spec:
  selector:
    matchLabels:
      app: front
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - image: iafak/front:v1
        name: front
        ports:
          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: front-srv
  namespace: django-ns
spec:
  type: NodePort
  selector:
    app: front
  ports:
   - port: 8080
     targetPort: 8080
     protocol: TCP
