ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: entrypointingress
  namespace: django-ns
spec:
  backend:
      serviceName: front
      servicePort: 8080
